<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_maps">

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.lokavo.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps">
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.lokavo.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history">
    </fragment>

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.lokavo.ui.article.ArticleFragment"
        android:label="fragment_article"
        tools:layout="@layout/fragment_article" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.lokavo.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_profileDetailFragment"
            app:destination="@id/profileDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.lokavo.ui.changePassword.ChangePasswordFragment"
        android:label="ChangePasswordFragment"
        tools:layout="@layout/fragment_change_password" />
    <fragment
        android:id="@+id/profileDetailFragment"
        android:name="com.lokavo.ui.profileDetail.ProfileDetailFragment"
        android:label="ProfileDetailFragment"
        tools:layout="@layout/fragment_profile_detail" />
</navigation>